--- a/Readme
+++ b/Readme
@@ -99,6 +99,7 @@
 
 #echarts
 ### Echarts                                  src/demo/Echarts/echarts.html
+### canvas地图迁徙图                         src/demo/echarts-migration-master/index.html
 
 #粒子特效
 ### 粒子特效（带水波纹的）                   src/demo/particles/particles.html
